[package]
name = "mrsa"
version = "0.1.0"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Media repository service automation"
repository = "https://github.com/phR0ze/rivia"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = false   # Provide debug symbols for Witcher
strip = true    # Remove all extra info

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
