[package]
name = "mrsa"
version = "0.1.11"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Media repository service automation"
repository = "https://github.com/phR0ze/mrsa"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

[workspace]
members = [ "core" ]

[dependencies]
mrsa-core = { path = "core" }
macroquad = { path = "../macroquad" }
egui = "0.19.0"
egui-macroquad = { path = "../egui-macroquad" }

[package.metadata.android]
android_version = 29
target_sdk_version = 26
min_sdk_version = 26
build_targets = [ "i686-linux-android" ]
#build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]

[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = false   # Provide debug symbols for Witcher
strip = true    # Remove all extra info

[profile.dev]
opt-level = 0   # Default no optimization