[package]
name = "mrsa-core"
version = "0.1.8"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Media repository service automation"
repository = "https://github.com/phR0ze/mrsa/core"
exclude = [
  "docs",
  "config",
  "examples",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = false   # Provide debug symbols for Witcher
strip = true    # Remove all extra info

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
rivia-vfs = "0.2"
macroquad = { path = "../../macroquad" }
gif = "0.11"
gif-dispose = "3.1"
rgb = "0.8"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

# Dependencies for examples and tests
[dev-dependencies]