[package]
name = "mrsa-core"
version = "0.1.9"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Media repository service automation"
repository = "https://github.com/phR0ze/mrsa/core"
exclude = [
  "docs",
  "config",
  "examples",
  "tests",
  "benches",
  "target",
  ".vscode"
]

[dependencies]
rivia-vfs = "0.2"
macroquad = { path = "../../macroquad" }
gif = "0.11"
gif-dispose = "3.1"
rgb = "0.8"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"

# Dependencies for examples and tests
[dev-dependencies]
lopdf = "0.27.0"
egui_demo_lib = { version = "0.19.0", default-features = false }
egui = "0.19.0"
egui-macroquad = { path = "../../egui-macroquad" }